Fix overlapping close icon

--- a/packages/block-library/src/gallery/editor.scss
+++ b/packages/block-library/src/gallery/editor.scss
@@ -22,7 +22,6 @@ figure.wp-block-gallery {
 
 	.wp-block-image {
 		.components-notice.is-error {
-			padding-right: 12px;
 			display: block;
 		}
 		.components-notice__content {
